<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/empty"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/linear_Fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp"
                app:layout_constraintTop_toBottomOf="@+id/image_logo">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/barlow_regular"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_button"/>

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/barlow_regular"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_button"/>

                <EditText
                    android:id="@+id/edit_alias"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:hint="@string/name"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/barlow_regular"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="text"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_button"/>


                <EditText
                    android:id="@+id/edit_age"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:hint="@string/age"
                    android:textColorHint="@color/white"
                    android:fontFamily="@font/barlow_regular"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_button"/>

            </LinearLayout>


            <TextView
                android:id="@+id/button_start"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:text="Start"
                android:textColor="@color/gray_button"
                android:gravity="center"
                android:fontFamily="@font/barlow_bold"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"/>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>